methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:6: error: not found: value c
    ligneV(c:Color);
           ^